Quick font fix that I really wanted done and some spacing issues

--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ html, body {
   background-color: #FBFBFB;
 }
 
+p, li {
+  font-family: 'Raleway', 'Courier New', Courier, monospace;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Roboto Mono', 'Courier New', Courier, monospace;
+}
+
 /*
 SPACING
 SPACING
